[gd_scene load_steps=8 format=3 uid="uid://dcv3f02nyj3uj"]

[ext_resource type="Texture2D" uid="uid://7nyw1bra1r1x" path="res://assets/enemigo/sprite_0.png" id="1_ablfe"]
[ext_resource type="Script" path="res://scripts/enemigos.gd" id="1_v4fkq"]
[ext_resource type="Texture2D" uid="uid://d0t02dr6jl5xr" path="res://assets/enemigo/sprite_1.png" id="2_at85m"]
[ext_resource type="AudioStream" uid="uid://ch4fwkkrg4aj6" path="res://music/punch-2-37333.mp3" id="4_eutl7"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2mw8t"]
size = Vector2(36, 36.5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_28w0b"]
size = Vector2(14.75, 31.25)

[sub_resource type="SpriteFrames" id="SpriteFrames_s7htb"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_ablfe")
}, {
"duration": 1.0,
"texture": ExtResource("2_at85m")
}],
"loop": true,
"name": &"move",
"speed": 5.0
}]

[node name="enemigo" type="CharacterBody2D"]
script = ExtResource("1_v4fkq")

[node name="DefensaCollision" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_2mw8t")

[node name="AtaqueArea" type="Area2D" parent="."]

[node name="AtaqueCollision" type="CollisionShape2D" parent="AtaqueArea"]
position = Vector2(21, 1)
shape = SubResource("RectangleShape2D_28w0b")

[node name="Animaciones" type="AnimatedSprite2D" parent="."]
position = Vector2(2, -1)
scale = Vector2(0.546875, 0.484375)
sprite_frames = SubResource("SpriteFrames_s7htb")
animation = &"move"
frame_progress = 0.882655

[node name="Punch" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_eutl7")
volume_db = 10.0

[connection signal="body_entered" from="AtaqueArea" to="." method="_on_ataque_area_body_entered"]
[connection signal="body_exited" from="AtaqueArea" to="." method="_on_ataque_area_body_exited"]
